# graphQL_resolver

./: Cargo.toml  README.md  query.graphql
resolver/: Cargo.toml
resolver/src/: error_codes.rs  lib.rs
src/: main.rs
