[package]
name = "graph_ql_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resolver = {path = "resolver/"}
async-graphql-parser = "7.0.3"
graphql-parser = "0.4.0"

[workspace]
members = ["resolver"]